--- a/Project 1 Data Katrina.ipynb
+++ b/Project 1 Data Katrina.ipynb
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "cd39a500",
    "metadata": {
     "scrolled": true
@@ -361,7 +361,7 @@
        "      <td>Katrina</td>\n",
        "      <td>2005-08-29</td>\n",
        "      <td>New Orleans Metro Area</td>\n",
-       "      <td>-4.660274</td>\n",
+       "      <td>-4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>157</th>\n",
@@ -370,7 +370,7 @@
        "      <td>Katrina</td>\n",
        "      <td>2005-08-29</td>\n",
        "      <td>New Orleans Metro Area</td>\n",
-       "      <td>-4.575342</td>\n",
+       "      <td>-4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>158</th>\n",
@@ -379,7 +379,7 @@
        "      <td>Katrina</td>\n",
        "      <td>2005-08-29</td>\n",
        "      <td>New Orleans Metro Area</td>\n",
-       "      <td>-4.498630</td>\n",
+       "      <td>-4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>159</th>\n",
@@ -388,7 +388,7 @@
        "      <td>Katrina</td>\n",
        "      <td>2005-08-29</td>\n",
        "      <td>New Orleans Metro Area</td>\n",
-       "      <td>-4.413699</td>\n",
+       "      <td>-4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>160</th>\n",
@@ -397,7 +397,7 @@
        "      <td>Katrina</td>\n",
        "      <td>2005-08-29</td>\n",
        "      <td>New Orleans Metro Area</td>\n",
-       "      <td>-4.331507</td>\n",
+       "      <td>-4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -411,15 +411,15 @@
        "159 2001-04-01                                      279.0   Katrina   \n",
        "160 2001-05-01                                      296.0   Katrina   \n",
        "\n",
-       "    Hurricane Date                Location     Delta  \n",
-       "156     2005-08-29  New Orleans Metro Area -4.660274  \n",
-       "157     2005-08-29  New Orleans Metro Area -4.575342  \n",
-       "158     2005-08-29  New Orleans Metro Area -4.498630  \n",
-       "159     2005-08-29  New Orleans Metro Area -4.413699  \n",
-       "160     2005-08-29  New Orleans Metro Area -4.331507  "
+       "    Hurricane Date                Location  Delta  \n",
+       "156     2005-08-29  New Orleans Metro Area     -4  \n",
+       "157     2005-08-29  New Orleans Metro Area     -4  \n",
+       "158     2005-08-29  New Orleans Metro Area     -4  \n",
+       "159     2005-08-29  New Orleans Metro Area     -4  \n",
+       "160     2005-08-29  New Orleans Metro Area     -4  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "804da188",
    "metadata": {},
    "outputs": [
@@ -519,7 +519,7 @@
        "4  2005-01-01  84318.920"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "9be756cc",
    "metadata": {},
    "outputs": [
@@ -634,7 +634,7 @@
        "4      0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,10 +666,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "567e513a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>NEWO322UR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1990-01-01</td>\n",
+       "      <td>6.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1990-02-01</td>\n",
+       "      <td>6.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1990-03-01</td>\n",
+       "      <td>6.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1990-04-01</td>\n",
+       "      <td>6.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1990-05-01</td>\n",
+       "      <td>6.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         DATE  NEWO322UR\n",
+       "0  1990-01-01        6.1\n",
+       "1  1990-02-01        6.1\n",
+       "2  1990-03-01        6.1\n",
+       "3  1990-04-01        6.1\n",
+       "4  1990-05-01        6.2"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#import Econ data from New Orleans\n",
     "\n",
@@ -681,10 +750,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "155cc0ec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>Unemployment</th>\n",
+       "      <th>Hurricane</th>\n",
+       "      <th>Hurricane Date</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Delta</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>132</th>\n",
+       "      <td>2001-01-01</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Katrina</td>\n",
+       "      <td>2005-08-29</td>\n",
+       "      <td>New Orleans Metro Area</td>\n",
+       "      <td>-4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>133</th>\n",
+       "      <td>2001-02-01</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Katrina</td>\n",
+       "      <td>2005-08-29</td>\n",
+       "      <td>New Orleans Metro Area</td>\n",
+       "      <td>-4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>134</th>\n",
+       "      <td>2001-03-01</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Katrina</td>\n",
+       "      <td>2005-08-29</td>\n",
+       "      <td>New Orleans Metro Area</td>\n",
+       "      <td>-4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>135</th>\n",
+       "      <td>2001-04-01</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Katrina</td>\n",
+       "      <td>2005-08-29</td>\n",
+       "      <td>New Orleans Metro Area</td>\n",
+       "      <td>-4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>136</th>\n",
+       "      <td>2001-05-01</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Katrina</td>\n",
+       "      <td>2005-08-29</td>\n",
+       "      <td>New Orleans Metro Area</td>\n",
+       "      <td>-4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          DATE  Unemployment Hurricane Hurricane Date                Location  \\\n",
+       "132 2001-01-01           5.0   Katrina     2005-08-29  New Orleans Metro Area   \n",
+       "133 2001-02-01           5.0   Katrina     2005-08-29  New Orleans Metro Area   \n",
+       "134 2001-03-01           5.0   Katrina     2005-08-29  New Orleans Metro Area   \n",
+       "135 2001-04-01           5.0   Katrina     2005-08-29  New Orleans Metro Area   \n",
+       "136 2001-05-01           5.0   Katrina     2005-08-29  New Orleans Metro Area   \n",
+       "\n",
+       "     Delta  \n",
+       "132     -4  \n",
+       "133     -4  \n",
+       "134     -4  \n",
+       "135     -4  \n",
+       "136     -4  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# remove rows prior to 2001\n",
     "\n",
@@ -712,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "98e45bcf",
    "metadata": {},
    "outputs": [
@@ -780,7 +949,7 @@
        "4  1/1/2005   30216"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "01d49815",
    "metadata": {},
    "outputs": [
@@ -888,7 +1057,7 @@
        "4 2005-01-01   30216   Katrina     2005-08-29  New Orleans Metro Area      0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -918,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "0cf1395f",
    "metadata": {},
    "outputs": [
@@ -986,7 +1155,7 @@
        "4  1/1/2004  1314.721"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1002,20 +1171,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "e4675978",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for -: 'str' and 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mC:\\Users\\LUNACL~1\\AppData\\Local\\Temp/ipykernel_7648/2538504304.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[0mkatrina_population_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Delta'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mkatrina_population_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Delta'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m \u001b[0mkatrina_population_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Delta'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mkatrina_population_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Delta'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'str' and 'int'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>Hurricane</th>\n",
+       "      <th>Hurricane Date</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Hurricane Year</th>\n",
+       "      <th>Population Year</th>\n",
+       "      <th>Delta</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2001-01-01</td>\n",
+       "      <td>1311.131</td>\n",
+       "      <td>Katrina</td>\n",
+       "      <td>2005-08-29</td>\n",
+       "      <td>New Orleans Metro Area</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>-4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2002-01-01</td>\n",
+       "      <td>1311.390</td>\n",
+       "      <td>Katrina</td>\n",
+       "      <td>2005-08-29</td>\n",
+       "      <td>New Orleans Metro Area</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>-3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2003-01-01</td>\n",
+       "      <td>1312.039</td>\n",
+       "      <td>Katrina</td>\n",
+       "      <td>2005-08-29</td>\n",
+       "      <td>New Orleans Metro Area</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>-2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2004-01-01</td>\n",
+       "      <td>1314.721</td>\n",
+       "      <td>Katrina</td>\n",
+       "      <td>2005-08-29</td>\n",
+       "      <td>New Orleans Metro Area</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2005-01-01</td>\n",
+       "      <td>1313.460</td>\n",
+       "      <td>Katrina</td>\n",
+       "      <td>2005-08-29</td>\n",
+       "      <td>New Orleans Metro Area</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        DATE  Population Hurricane Hurricane Date                Location  \\\n",
+       "1 2001-01-01    1311.131   Katrina     2005-08-29  New Orleans Metro Area   \n",
+       "2 2002-01-01    1311.390   Katrina     2005-08-29  New Orleans Metro Area   \n",
+       "3 2003-01-01    1312.039   Katrina     2005-08-29  New Orleans Metro Area   \n",
+       "4 2004-01-01    1314.721   Katrina     2005-08-29  New Orleans Metro Area   \n",
+       "5 2005-01-01    1313.460   Katrina     2005-08-29  New Orleans Metro Area   \n",
+       "\n",
+       "   Hurricane Year  Population Year  Delta  \n",
+       "1            2005             2001     -4  \n",
+       "2            2005             2002     -3  \n",
+       "3            2005             2003     -2  \n",
+       "4            2005             2004     -1  \n",
+       "5            2005             2005      0  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1031,9 +1300,16 @@
     "\n",
     "katrina_population_df['Hurricane Date'] = pd.to_datetime(katrina_population_df['Hurricane Date'])\n",
     "\n",
+    "katrina_population_df['Hurricane Year'] = pd.to_datetime(katrina_population_df['Hurricane Date'],format='%Y%m%d')\n",
+    "\n",
+    "katrina_population_df['Hurricane Year'] = pd.DatetimeIndex(katrina_population_df['Hurricane Year']).year\n",
+    "\n",
+    "katrina_population_df['Population Year'] = pd.to_datetime(katrina_population_df['DATE'],format='%Y%m%d')\n",
+    "\n",
+    "katrina_population_df['Population Year'] = pd.DatetimeIndex(katrina_population_df['Population Year']).year\n",
     "\n",
     "#We will need to show data from multiple years, so delta from hurricane best option\n",
-    "katrina_population_df['Delta'] = ((katrina_population_df['DATE'] - katrina_population_df['Hurricane Date']).dt.days/365)\n",
+    "katrina_population_df['Delta'] = ((katrina_population_df['Population Year'] - katrina_population_df['Hurricane Year']))\n",
     "\n",
     "katrina_population_df['Delta'] = katrina_population_df['Delta'].astype(int)\n",
     "\n",
@@ -1045,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "f94fab04",
    "metadata": {},
    "outputs": [],
@@ -1086,6 +1362,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4fd2282f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0868637",
    "metadata": {},
    "outputs": [],
    "source": []
